# VoxelToy

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: auto-clang-format.yml  macos-sonarcloud.yml
CMake/: CodeCoverage.cmake  CompileOptions.cmake
Includes/VoxelToy/: Shader.hpp
Includes/VoxelToy/Graphics/: OpenGLContext.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
Includes/VoxelToy/Window/: Window.hpp
Resources/shader/: camera.fs
Sources/VoxelToy/: CMakeLists.txt  Shader.cpp  main.cpp
Sources/VoxelToy/Graphics/: Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Sources/VoxelToy/Window/: Window.cpp
